--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,10 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+ 静态网页,图片. 纯粹静态html站点
+
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html> 
