--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root">
- 静态网页,图片. 纯粹静态html站点
+ 静态网页,图片. 纯粹静态html站点!!!
 
     </div>
     <script type="module" src="/src/main.jsx"></script>
